# seedance-cli

./: CHANGELOG.md  Cargo.toml  README.md  SKILL.md  package.json
.github/workflows/: release.yml
references/: genre-guides.md  i2v-guide.md  intent-vs-precision.md  quick-ref.md  reference-workflow.md
scripts/: install.js  run.js  tag-release.sh
skills/seedance-antislop/: SKILL.md
skills/seedance-audio/: SKILL.md
skills/seedance-camera/: SKILL.md
skills/seedance-characters/: SKILL.md
skills/seedance-cli/: SKILL.md
skills/seedance-copyright/: SKILL.md
skills/seedance-examples-zh/: SKILL.md
skills/seedance-filter/: SKILL.md
skills/seedance-interview/: SKILL.md
skills/seedance-interview-short/: SKILL.md
skills/seedance-lighting/: SKILL.md
skills/seedance-motion/: SKILL.md
skills/seedance-pipeline/: SKILL.md
skills/seedance-prompt/: SKILL.md
skills/seedance-prompt-short/: SKILL.md
skills/seedance-recipes/: SKILL.md
skills/seedance-style/: SKILL.md
skills/seedance-troubleshoot/: SKILL.md
skills/seedance-vfx/: SKILL.md
skills/seedance-vocab-es/: SKILL.md
skills/seedance-vocab-ja/: SKILL.md
skills/seedance-vocab-ko/: SKILL.md
skills/seedance-vocab-ru/: SKILL.md
skills/seedance-vocab-zh/: SKILL.md
src/: lib.rs  main.rs
src/cli/: common.rs  config.rs  download.rs  edit.rs  extend.rs  generate.rs  list.rs  mod.rs  status.rs
src/client/: error.rs  mod.rs  types.rs
src/config/: mod.rs
src/core/: downloader.rs  mod.rs  poller.rs  upload.rs
src/store/: mod.rs
src/ui/: mod.rs
tests/: unit_tests.rs
