[package]
name = "seedance-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Seedance 2.0 video generation on Volcengine Ark"

[[bin]]
name = "seedance"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
dirs = "5"
base64 = "0.22"
url = "2"
thiserror = "2"
anyhow = "1"
chrono = "0.4"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
